--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -20,7 +20,12 @@ jobs:
           architecture: 'x64'
       - run: |
           python -m pip install --upgrade pip
+          pip install get-chrome-driver --upgrade
+          sudo apt-get -y install fonts-ipafont-gothic
+          sudo apt-get -y install fonts-ipafont-mincho
           pip install python-dotenv
           pip install tweepy
+          pip install selenium
           pip install beautifulsoup4
+          pip install pillow
           python train_bot.py
