--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -9,6 +9,8 @@ env:  #環境変数から文字列(パスワードなど)を取得
   CONSUMER_KEY: ${{secrets.CONSUMER_KEY}}
   CONSUMER_SECRET: ${{secrets.CONSUMER_SECRET}}
   LINE_NOTIFY: ${{secrets.LINE_NOTIFY}}
+  E_MAIL: ${{secrets.E_MAIL}}
+  PASSWORD: ${{secrets.PASSWORD}}
 
 jobs:
   selenium:
