--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -1,8 +1,7 @@
 name: github-actions
 on:
-  workflow_dispatch:
-  #schedule:
-    #- cron: "0 */2 * * *"  #2時間ごとに動作
+  schedule:
+    - cron: "*/5 20-23,6-7 * * *"  #5分ごとに動作
 env:  #環境変数から文字列(パスワードなど)を取得
   ACCESS_TOKEN: ${{secrets.ACCESS_TOKEN}}
   ACCESS_TOKEN_SECRET: ${{secrets.ACCESS_TOKEN_SECRET}}
