--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -1,7 +1,8 @@
 name: github-actions
 on:
-  schedule:
-    - cron: "*/5 20-22,2-4,6-7 * * *"  #5分ごとに動作
+  workflow_dispatch:
+  #schedule:
+    #- cron: "*/5 20-22,2-4,6-7 * * *"  #5分ごとに動作
 env:  #環境変数から文字列(パスワードなど)を取得
   ACCESS_TOKEN: ${{secrets.ACCESS_TOKEN}}
   ACCESS_TOKEN_SECRET: ${{secrets.ACCESS_TOKEN_SECRET}}
