--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -1,5 +1,6 @@
 name: github-actions
 on:
+ workflow_dispatch:
   #schedule:
     #- cron: "*/6 20-22,2-4,6-7 * * *"  #6分ごとに動作
 env:  #環境変数から文字列(パスワードなど)を取得
